--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+@import "./button.css";
+@import "./button-icon.css";
+@import "./header.css";
+
+
 :root {
   --fontBase: 'Poppins', sans-serif;
   --headline1: bold 95px/153.71px var(--fontBase);
@@ -12,6 +17,7 @@
   --gradient: radial-gradient(41.48% 11.48% at 2.38% 8.52%, #747DE9 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(135deg, #72EDF2 0%, #5151E5 100%);
   --purple: #310A90;
   --green: #42E2B8;
+  --white: white;
 }
 
 body {
@@ -19,9 +25,4 @@ body {
   min-block-size: 100vh;
   font: var(--body1);
   color: var(--green);
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
 }
