--- a/css/hero.css
+++ b/css/hero.css
@@ -23,3 +23,29 @@
   font: var(--headline5);
   display: block;
 }
+
+@media screen and (min-width: 768px) {
+  .hero {
+    display: flex;
+    gap: 32px;
+  }
+  .hero-description {
+    order: 1;
+    max-inline-size: 450px;
+  }
+  .hero-image {
+    order: 2;
+    text-align: end;
+    flex: 1;
+  }
+
+
+
+}
+
+@media screen and (min-width: 1024px) {
+  .hero-image img {
+    inline-size: 500px;
+    block-size: 504px;
+  }
+}
