--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,8 @@
 @import "./button-icon.css";
 @import "./header.css";
 @import "./hero.css";
+@import "./wrapper.css";
+@import "./menu.css";
 
 
 :root {
