--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,9 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    block-size: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  block-size: 80px;
+  position: sticky;
+  top: 0;
+  backdrop-filter: blur(10px);
 }
