--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,11 @@
-header {
+.header {
+  position: sticky;
+  top: 0;
+  backdrop-filter: blur(10px);
+}
+.header-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  block-size: 80px;
 }
