--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,14 @@
 @import "./button.css";
+@import "./button-icon.css";
 @import "./header.css";
+@import "./hero.css";
+@import "./wrapper.css";
+@import "./menu.css";
+@import "./project.css";
+@import "./social.css";
+@import "./footer.css";
+@import "./form.css";
+@import "./title.css";
 
 
 :root {
@@ -23,5 +32,6 @@ body {
   background: var(--gradient);
   min-block-size: 100vh;
   font: var(--body1);
-  color: var(--green);
+  color: var(--purple);
+  margin: 0;
 }
